ptucc_parser.output
State 198 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_decl type_declaration var_declaration subroutine_decl_list main_body '.'

    2 program_decl: KW_PROGRAM IDENT ';'

    3 main_body: KW_BEGIN statements KW_END

    4 body: KW_BEGIN statements KW_END

    5 statements: %empty
    6           | statement_list

    7 statement_list: statement
    8               | statement_list ';' statement

    9 statement: proc_call
   10          | instruction

   11 proc_call: IDENT '(' arguments ')'

   12 arguments: %empty
   13          | arglist

   14 arglist: expression
   15        | arglist ',' expression

   16 expression: POSINT
   17           | REAL
   18           | IDENT array_call
   19           | KW_RESULT
   20           | KW_TRUE
   21           | KW_FALSE
   22           | STRING
   23           | '(' expression ')'
   24           | CAST_INTEGER expression
   25           | CAST_BOOLEAN expression
   26           | CAST_CHAR expression
   27           | CAST_REAL expression
   28           | expression '+' expression
   29           | expression '-' expression
   30           | expression '*' expression
   31           | expression '/' expression
   32           | expression KW_DIV expression
   33           | expression KW_MOD expression
   34           | KW_NOT expression
   35           | '-' expression
   36           | '+' expression
   37           | expression '=' expression
   38           | expression OP_INEQUAL expression
   39           | expression '<' expression
   40           | expression '>' expression
   41           | expression OP_LESSEQ expression
   42           | expression OP_GREATEREQ expression
   43           | expression KW_AND expression
   44           | expression KW_OR expression
   45           | proc_call

   46 data_type: basic_data_type
   47          | array_of_type

   48 basic_data_type: KW_INTEGER
   49                | KW_BOOLEAN
   50                | KW_CHAR
   51                | KW_REAL
   52                | IDENT

   53 array_of_type: KW_ARRAY KW_OF basic_data_type

   54 type_declaration: %empty
   55                 | KW_TYPE type_decl_list

   56 type_decl_list: type_decl
   57               | type_decl_list type_decl

   58 type_decl: IDENT '=' data_type ';'
   59          | IDENT '=' KW_ARRAY array_size KW_OF basic_data_type ';'
   60          | IDENT '=' KW_FUNCTION '(' sub_arg_decl_list ')' ':' data_type ';'
   61          | IDENT '=' KW_FUNCTION '(' ')' ':' data_type ';'

   62 var_declaration: %empty
   63                | KW_VAR var_decl_list ';'

   64 var_decl_list: var_decl
   65              | var_decl_list ';' var_decl

   66 var_decl: var_ident ':' data_type
   67         | var_ident ':' KW_ARRAY array_size KW_OF basic_data_type
   68         | var_ident ':' KW_FUNCTION '(' sub_arg_decl_list ')' ':' data_type
   69         | var_ident ':' KW_FUNCTION '(' ')' ':' data_type

   70 subroutine_decl_list: %empty
   71                     | subroutine_decl_list subroutine

   72 subroutine: subroutine_decl type_declaration var_declaration subroutine_decl_list subroutine_body ';'

   73 subroutine_decl: KW_PROCEDURE IDENT '(' sub_arg_decl_list ')' ';'
   74                | KW_PROCEDURE IDENT '(' ')' ';'
   75                | KW_FUNCTION IDENT '(' sub_arg_decl_list ')' ':' data_type ';'
   76                | KW_FUNCTION IDENT '(' ')' ':' data_type ';'

   77 sub_arg_decl_list: sub_arg_decl
   78                  | sub_arg_decl_list ';' sub_arg_decl

   79 sub_arg_decl: var_ident ':' data_type
   80             | var_ident ':' KW_ARRAY array_size KW_OF basic_data_type
   81             | var_ident ':' KW_FUNCTION '(' sub_arg_decl_list ')' ':' data_type
   82             | var_ident ':' KW_FUNCTION '(' ')' ':' data_type

   83 subroutine_body: KW_BEGIN statements KW_END

   84 var_ident: IDENT
   85          | IDENT ',' var_ident

   86 array_call: %empty
   87           | array_size

   88 array_size: '[' expression ']'
   89           | '[' expression ']' array_size

   90 instruction: body
   91            | IDENT array_call ASSIGN expression
   92            | KW_RESULT ASSIGN expression
   93            | KW_IF expression KW_THEN statement
   94            | KW_IF expression KW_THEN statement KW_ELSE statement
   95            | KW_FOR IDENT array_call ASSIGN expression KW_TO expression KW_DO statement
   96            | KW_FOR IDENT array_call ASSIGN expression KW_DOWNTO expression KW_DO statement
   97            | KW_WHILE expression KW_DO statement
   98            | KW_REPEAT statement KW_UNTIL expression
   99            | IDENT ':' statement
  100            | KW_GOTO IDENT
  101            | KW_RETURN
  102            | IDENT array_call ASSIGN LIB_RS '(' ')'
  103            | IDENT array_call ASSIGN LIB_RI '(' ')'
  104            | IDENT array_call ASSIGN LIB_RR '(' ')'
  105            | KW_RESULT ASSIGN LIB_RS '(' ')'
  106            | KW_RESULT ASSIGN LIB_RI '(' ')'
  107            | KW_RESULT ASSIGN LIB_RR '(' ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 23 60 61 68 69 73 74 75 76 81 82 102 103 104 105 106 107
')' (41) 11 23 60 61 68 69 73 74 75 76 81 82 102 103 104 105 106 107
'*' (42) 30
'+' (43) 28 36
',' (44) 15 85
'-' (45) 29 35
'.' (46) 1
'/' (47) 31
':' (58) 60 61 66 67 68 69 75 76 79 80 81 82 99
';' (59) 2 8 58 59 60 61 63 65 72 73 74 75 76 78
'<' (60) 39
'=' (61) 37 58 59 60 61
'>' (62) 40
'[' (91) 88 89
']' (93) 88 89
error (256)
IDENT (258) 2 11 18 52 58 59 60 61 73 74 75 76 84 85 91 95 96 99 100
    102 103 104
POSINT (259) 16
REAL (260) 17
STRING (261) 22
KW_PROGRAM (262) 2
KW_BEGIN (263) 3 4 83
KW_END (264) 3 4 83
KW_AND (265) 43
KW_DIV (266) 32
KW_FUNCTION (267) 60 61 68 69 75 76 81 82
KW_MOD (268) 33
KW_PROCEDURE (269) 73 74
KW_RESULT (270) 19 92 105 106 107
KW_ARRAY (271) 53 59 67 80
KW_DO (272) 95 96 97
KW_GOTO (273) 100
KW_NOT (274) 34
KW_RETURN (275) 101
KW_BOOLEAN (276) 49
KW_ELSE (277) 94
KW_IF (278) 93 94
KW_OF (279) 53 59 67 80
KW_REAL (280) 51
KW_THEN (281) 93 94
KW_CHAR (282) 50
KW_FOR (283) 95 96
KW_INTEGER (284) 48
KW_OR (285) 44
KW_REPEAT (286) 98
KW_UNTIL (287) 98
KW_VAR (288) 63
KW_WHILE (289) 97
KW_TO (290) 95
KW_DOWNTO (291) 96
KW_TYPE (292) 55
LIB_RS (293) 102 105
LIB_RI (294) 103 106
LIB_RR (295) 104 107
KW_TRUE (296) 20
KW_FALSE (297) 21
CAST_INTEGER (298) 24
CAST_BOOLEAN (299) 25
CAST_CHAR (300) 26
CAST_REAL (301) 27
OP_INEQUAL (302) 38
OP_LESSEQ (303) 41
OP_GREATEREQ (304) 42
ASSIGN (305) 91 92 95 96 102 103 104 105 106 107
UMINUS (306)
UPLUS (307)


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
program (69)
    on left: 1, on right: 0
program_decl (70)
    on left: 2, on right: 1
main_body (71)
    on left: 3, on right: 1
body (72)
    on left: 4, on right: 90
statements (73)
    on left: 5 6, on right: 3 4 83
statement_list (74)
    on left: 7 8, on right: 6 8
statement (75)
    on left: 9 10, on right: 7 8 93 94 95 96 97 98 99
proc_call (76)
    on left: 11, on right: 9 45
arguments (77)
    on left: 12 13, on right: 11
arglist (78)
    on left: 14 15, on right: 13 15
expression (79)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 39 40 41 42 43 44 45, on right: 14 15 23 24 25 26
    27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 88 89 91
    92 93 94 95 96 97 98
data_type (80)
    on left: 46 47, on right: 58 60 61 66 68 69 75 76 79 81 82
basic_data_type (81)
    on left: 48 49 50 51 52, on right: 46 53 59 67 80
array_of_type (82)
    on left: 53, on right: 47
type_declaration (83)
    on left: 54 55, on right: 1 72
type_decl_list (84)
    on left: 56 57, on right: 55 57
type_decl (85)
    on left: 58 59 60 61, on right: 56 57
var_declaration (86)
    on left: 62 63, on right: 1 72
var_decl_list (87)
    on left: 64 65, on right: 63 65
var_decl (88)
    on left: 66 67 68 69, on right: 64 65
subroutine_decl_list (89)
    on left: 70 71, on right: 1 71 72
subroutine (90)
    on left: 72, on right: 71
subroutine_decl (91)
    on left: 73 74 75 76, on right: 72
sub_arg_decl_list (92)
    on left: 77 78, on right: 60 68 73 75 78 81
sub_arg_decl (93)
    on left: 79 80 81 82, on right: 77 78
subroutine_body (94)
    on left: 83, on right: 72
var_ident (95)
    on left: 84 85, on right: 66 67 68 69 79 80 81 82 85
array_call (96)
    on left: 86 87, on right: 18 91 95 96 102 103 104
array_size (97)
    on left: 88 89, on right: 59 67 80 87 89
instruction (98)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107, on right: 10


State 0

    0 $accept: . program $end

    KW_PROGRAM  shift, and go to state 1

    program       go to state 2
    program_decl  go to state 3


State 1

    2 program_decl: KW_PROGRAM . IDENT ';'

    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_decl . type_declaration var_declaration subroutine_decl_list main_body '.'

    KW_TYPE  shift, and go to state 6

    $default  reduce using rule 54 (type_declaration)

    type_declaration  go to state 7


State 4

    2 program_decl: KW_PROGRAM IDENT . ';'

    ';'  shift, and go to state 8


State 5

    0 $accept: program $end .

    $default  accept


State 6

   55 type_declaration: KW_TYPE . type_decl_list

    IDENT  shift, and go to state 9

    type_decl_list  go to state 10
    type_decl       go to state 11


State 7

    1 program: program_decl type_declaration . var_declaration subroutine_decl_list main_body '.'

    KW_VAR  shift, and go to state 12

    $default  reduce using rule 62 (var_declaration)

    var_declaration  go to state 13


State 8

    2 program_decl: KW_PROGRAM IDENT ';' .

    $default  reduce using rule 2 (program_decl)


State 9

   58 type_decl: IDENT . '=' data_type ';'
   59          | IDENT . '=' KW_ARRAY array_size KW_OF basic_data_type ';'
   60          | IDENT . '=' KW_FUNCTION '(' sub_arg_decl_list ')' ':' data_type ';'
   61          | IDENT . '=' KW_FUNCTION '(' ')' ':' data_type ';'

    '='  shift, and go to state 14


State 10

   55 type_declaration: KW_TYPE type_decl_list .
   57 type_decl_list: type_decl_list . type_decl

    IDENT  shift, and go to state 9

    $default  reduce using rule 55 (type_declaration)

    type_decl  go to state 15


State 11

   56 type_decl_list: type_decl .

    $default  reduce using rule 56 (type_decl_list)


State 12

   63 var_declaration: KW_VAR . var_decl_list ';'

    IDENT  shift, and go to state 16

    var_decl_list  go to state 17
    var_decl       go to state 18
    var_ident      go to state 19


State 13

    1 program: program_decl type_declaration var_declaration . subroutine_decl_list main_body '.'

    $default  reduce using rule 70 (subroutine_decl_list)

    subroutine_decl_list  go to state 20


State 14

   58 type_decl: IDENT '=' . data_type ';'
   59          | IDENT '=' . KW_ARRAY array_size KW_OF basic_data_type ';'
   60          | IDENT '=' . KW_FUNCTION '(' sub_arg_decl_list ')' ':' data_type ';'
   61          | IDENT '=' . KW_FUNCTION '(' ')' ':' data_type ';'

    IDENT        shift, and go to state 21
    KW_FUNCTION  shift, and go to state 22
    KW_ARRAY     shift, and go to state 23
    KW_BOOLEAN   shift, and go to state 24
    KW_REAL      shift, and go to state 25
    KW_CHAR      shift, and go to state 26
    KW_INTEGER   shift, and go to state 27

    data_type        go to state 28
    basic_data_type  go to state 29
    array_of_type    go to state 30


State 15

   57 type_decl_list: type_decl_list type_decl .

    $default  reduce using rule 57 (type_decl_list)


State 16

   84 var_ident: IDENT .
   85          | IDENT . ',' var_ident

    ','  shift, and go to state 31

    $default  reduce using rule 84 (var_ident)


State 17

   63 var_declaration: KW_VAR var_decl_list . ';'
   65 var_decl_list: var_decl_list . ';' var_decl

    ';'  shift, and go to state 32


State 18

   64 var_decl_list: var_decl .

    $default  reduce using rule 64 (var_decl_list)


State 19

   66 var_decl: var_ident . ':' data_type
   67         | var_ident . ':' KW_ARRAY array_size KW_OF basic_data_type
   68         | var_ident . ':' KW_FUNCTION '(' sub_arg_decl_list ')' ':' data_type
   69         | var_ident . ':' KW_FUNCTION '(' ')' ':' data_type

    ':'  shift, and go to state 33


State 20

    1 program: program_decl type_declaration var_declaration subroutine_decl_list . main_body '.'
   71 subroutine_decl_list: subroutine_decl_list . subroutine

    KW_BEGIN      shift, and go to state 34
    KW_FUNCTION   shift, and go to state 35
    KW_PROCEDURE  shift, and go to state 36

    main_body        go to state 37
    subroutine       go to state 38
    subroutine_decl  go to state 39


State 21

   52 basic_data_type: IDENT .

    $default  reduce using rule 52 (basic_data_type)


State 22

   60 type_decl: IDENT '=' KW_FUNCTION . '(' sub_arg_decl_list ')' ':' data_type ';'
   61          | IDENT '=' KW_FUNCTION . '(' ')' ':' data_type ';'

    '('  shift, and go to state 40


State 23

   53 array_of_type: KW_ARRAY . KW_OF basic_data_type
   59 type_decl: IDENT '=' KW_ARRAY . array_size KW_OF basic_data_type ';'

    KW_OF  shift, and go to state 41
    '['    shift, and go to state 42

    array_size  go to state 43


State 24

   49 basic_data_type: KW_BOOLEAN .

    $default  reduce using rule 49 (basic_data_type)


State 25

   51 basic_data_type: KW_REAL .

    $default  reduce using rule 51 (basic_data_type)


State 26

   50 basic_data_type: KW_CHAR .

    $default  reduce using rule 50 (basic_data_type)


State 27

   48 basic_data_type: KW_INTEGER .

    $default  reduce using rule 48 (basic_data_type)


State 28

   58 type_decl: IDENT '=' data_type . ';'

    ';'  shift, and go to state 44


State 29

   46 data_type: basic_data_type .

    $default  reduce using rule 46 (data_type)


State 30

   47 data_type: array_of_type .

    $default  reduce using rule 47 (data_type)


State 31

   85 var_ident: IDENT ',' . var_ident

    IDENT  shift, and go to state 16

    var_ident  go to state 45


State 32

   63 var_declaration: KW_VAR var_decl_list ';' .
   65 var_decl_list: var_decl_list ';' . var_decl

    IDENT  shift, and go to state 16

    $default  reduce using rule 63 (var_declaration)

    var_decl   go to state 46
    var_ident  go to state 19


State 33

   66 var_decl: var_ident ':' . data_type
   67         | var_ident ':' . KW_ARRAY array_size KW_OF basic_data_type
   68         | var_ident ':' . KW_FUNCTION '(' sub_arg_decl_list ')' ':' data_type
   69         | var_ident ':' . KW_FUNCTION '(' ')' ':' data_type

    IDENT        shift, and go to state 21
    KW_FUNCTION  shift, and go to state 47
    KW_ARRAY     shift, and go to state 48
    KW_BOOLEAN   shift, and go to state 24
    KW_REAL      shift, and go to state 25
    KW_CHAR      shift, and go to state 26
    KW_INTEGER   shift, and go to state 27

    data_type        go to state 49
    basic_data_type  go to state 29
    array_of_type    go to state 30


State 34

    3 main_body: KW_BEGIN . statements KW_END

    IDENT      shift, and go to state 50
    KW_BEGIN   shift, and go to state 51
    KW_RESULT  shift, and go to state 52
    KW_GOTO    shift, and go to state 53
    KW_RETURN  shift, and go to state 54
    KW_IF      shift, and go to state 55
    KW_FOR     shift, and go to state 56
    KW_REPEAT  shift, and go to state 57
    KW_WHILE   shift, and go to state 58

    $default  reduce using rule 5 (statements)

    body            go to state 59
    statements      go to state 60
    statement_list  go to state 61
    statement       go to state 62
    proc_call       go to state 63
    instruction     go to state 64


State 35

   75 subroutine_decl: KW_FUNCTION . IDENT '(' sub_arg_decl_list ')' ':' data_type ';'
   76                | KW_FUNCTION . IDENT '(' ')' ':' data_type ';'

    IDENT  shift, and go to state 65


State 36

   73 subroutine_decl: KW_PROCEDURE . IDENT '(' sub_arg_decl_list ')' ';'
   74                | KW_PROCEDURE . IDENT '(' ')' ';'

    IDENT  shift, and go to state 66


State 37

    1 program: program_decl type_declaration var_declaration subroutine_decl_list main_body . '.'

    '.'  shift, and go to state 67


State 38

   71 subroutine_decl_list: subroutine_decl_list subroutine .

    $default  reduce using rule 71 (subroutine_decl_list)


State 39

   72 subroutine: subroutine_decl . type_declaration var_declaration subroutine_decl_list subroutine_body ';'

    KW_TYPE  shift, and go to state 6

    $default  reduce using rule 54 (type_declaration)

    type_declaration  go to state 68


State 40

   60 type_decl: IDENT '=' KW_FUNCTION '(' . sub_arg_decl_list ')' ':' data_type ';'
   61          | IDENT '=' KW_FUNCTION '(' . ')' ':' data_type ';'

    IDENT  shift, and go to state 16
    ')'    shift, and go to state 69

    sub_arg_decl_list  go to state 70
    sub_arg_decl       go to state 71
    var_ident          go to state 72


State 41

   53 array_of_type: KW_ARRAY KW_OF . basic_data_type

    IDENT       shift, and go to state 21
    KW_BOOLEAN  shift, and go to state 24
    KW_REAL     shift, and go to state 25
    KW_CHAR     shift, and go to state 26
    KW_INTEGER  shift, and go to state 27

    basic_data_type  go to state 73


State 42

   88 array_size: '[' . expression ']'
   89           | '[' . expression ']' array_size

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 90


State 43

   59 type_decl: IDENT '=' KW_ARRAY array_size . KW_OF basic_data_type ';'

    KW_OF  shift, and go to state 91


State 44

   58 type_decl: IDENT '=' data_type ';' .

    $default  reduce using rule 58 (type_decl)


State 45

   85 var_ident: IDENT ',' var_ident .

    $default  reduce using rule 85 (var_ident)


State 46

   65 var_decl_list: var_decl_list ';' var_decl .

    $default  reduce using rule 65 (var_decl_list)


State 47

   68 var_decl: var_ident ':' KW_FUNCTION . '(' sub_arg_decl_list ')' ':' data_type
   69         | var_ident ':' KW_FUNCTION . '(' ')' ':' data_type

    '('  shift, and go to state 92


State 48

   53 array_of_type: KW_ARRAY . KW_OF basic_data_type
   67 var_decl: var_ident ':' KW_ARRAY . array_size KW_OF basic_data_type

    KW_OF  shift, and go to state 41
    '['    shift, and go to state 42

    array_size  go to state 93


State 49

   66 var_decl: var_ident ':' data_type .

    $default  reduce using rule 66 (var_decl)


State 50

   11 proc_call: IDENT . '(' arguments ')'
   91 instruction: IDENT . array_call ASSIGN expression
   99            | IDENT . ':' statement
  102            | IDENT . array_call ASSIGN LIB_RS '(' ')'
  103            | IDENT . array_call ASSIGN LIB_RI '(' ')'
  104            | IDENT . array_call ASSIGN LIB_RR '(' ')'

    '('  shift, and go to state 94
    ':'  shift, and go to state 95
    '['  shift, and go to state 42

    $default  reduce using rule 86 (array_call)

    array_call  go to state 96
    array_size  go to state 97


State 51

    4 body: KW_BEGIN . statements KW_END

    IDENT      shift, and go to state 50
    KW_BEGIN   shift, and go to state 51
    KW_RESULT  shift, and go to state 52
    KW_GOTO    shift, and go to state 53
    KW_RETURN  shift, and go to state 54
    KW_IF      shift, and go to state 55
    KW_FOR     shift, and go to state 56
    KW_REPEAT  shift, and go to state 57
    KW_WHILE   shift, and go to state 58

    $default  reduce using rule 5 (statements)

    body            go to state 59
    statements      go to state 98
    statement_list  go to state 61
    statement       go to state 62
    proc_call       go to state 63
    instruction     go to state 64


State 52

   92 instruction: KW_RESULT . ASSIGN expression
  105            | KW_RESULT . ASSIGN LIB_RS '(' ')'
  106            | KW_RESULT . ASSIGN LIB_RI '(' ')'
  107            | KW_RESULT . ASSIGN LIB_RR '(' ')'

    ASSIGN  shift, and go to state 99


State 53

  100 instruction: KW_GOTO . IDENT

    IDENT  shift, and go to state 100


State 54

  101 instruction: KW_RETURN .

    $default  reduce using rule 101 (instruction)


State 55

   93 instruction: KW_IF . expression KW_THEN statement
   94            | KW_IF . expression KW_THEN statement KW_ELSE statement

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 101


State 56

   95 instruction: KW_FOR . IDENT array_call ASSIGN expression KW_TO expression KW_DO statement
   96            | KW_FOR . IDENT array_call ASSIGN expression KW_DOWNTO expression KW_DO statement

    IDENT  shift, and go to state 102


State 57

   98 instruction: KW_REPEAT . statement KW_UNTIL expression

    IDENT      shift, and go to state 50
    KW_BEGIN   shift, and go to state 51
    KW_RESULT  shift, and go to state 52
    KW_GOTO    shift, and go to state 53
    KW_RETURN  shift, and go to state 54
    KW_IF      shift, and go to state 55
    KW_FOR     shift, and go to state 56
    KW_REPEAT  shift, and go to state 57
    KW_WHILE   shift, and go to state 58

    body         go to state 59
    statement    go to state 103
    proc_call    go to state 63
    instruction  go to state 64


State 58

   97 instruction: KW_WHILE . expression KW_DO statement

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 104


State 59

   90 instruction: body .

    $default  reduce using rule 90 (instruction)


State 60

    3 main_body: KW_BEGIN statements . KW_END

    KW_END  shift, and go to state 105


State 61

    6 statements: statement_list .
    8 statement_list: statement_list . ';' statement

    ';'  shift, and go to state 106

    $default  reduce using rule 6 (statements)


State 62

    7 statement_list: statement .

    $default  reduce using rule 7 (statement_list)


State 63

    9 statement: proc_call .

    $default  reduce using rule 9 (statement)


State 64

   10 statement: instruction .

    $default  reduce using rule 10 (statement)


State 65

   75 subroutine_decl: KW_FUNCTION IDENT . '(' sub_arg_decl_list ')' ':' data_type ';'
   76                | KW_FUNCTION IDENT . '(' ')' ':' data_type ';'

    '('  shift, and go to state 107


State 66

   73 subroutine_decl: KW_PROCEDURE IDENT . '(' sub_arg_decl_list ')' ';'
   74                | KW_PROCEDURE IDENT . '(' ')' ';'

    '('  shift, and go to state 108


State 67

    1 program: program_decl type_declaration var_declaration subroutine_decl_list main_body '.' .

    $default  reduce using rule 1 (program)


State 68

   72 subroutine: subroutine_decl type_declaration . var_declaration subroutine_decl_list subroutine_body ';'

    KW_VAR  shift, and go to state 12

    $default  reduce using rule 62 (var_declaration)

    var_declaration  go to state 109


State 69

   61 type_decl: IDENT '=' KW_FUNCTION '(' ')' . ':' data_type ';'

    ':'  shift, and go to state 110


State 70

   60 type_decl: IDENT '=' KW_FUNCTION '(' sub_arg_decl_list . ')' ':' data_type ';'
   78 sub_arg_decl_list: sub_arg_decl_list . ';' sub_arg_decl

    ';'  shift, and go to state 111
    ')'  shift, and go to state 112


State 71

   77 sub_arg_decl_list: sub_arg_decl .

    $default  reduce using rule 77 (sub_arg_decl_list)


State 72

   79 sub_arg_decl: var_ident . ':' data_type
   80             | var_ident . ':' KW_ARRAY array_size KW_OF basic_data_type
   81             | var_ident . ':' KW_FUNCTION '(' sub_arg_decl_list ')' ':' data_type
   82             | var_ident . ':' KW_FUNCTION '(' ')' ':' data_type

    ':'  shift, and go to state 113


State 73

   53 array_of_type: KW_ARRAY KW_OF basic_data_type .

    $default  reduce using rule 53 (array_of_type)


State 74

   11 proc_call: IDENT . '(' arguments ')'
   18 expression: IDENT . array_call

    '('  shift, and go to state 94
    '['  shift, and go to state 42

    $default  reduce using rule 86 (array_call)

    array_call  go to state 114
    array_size  go to state 97


State 75

   16 expression: POSINT .

    $default  reduce using rule 16 (expression)


State 76

   17 expression: REAL .

    $default  reduce using rule 17 (expression)


State 77

   22 expression: STRING .

    $default  reduce using rule 22 (expression)


State 78

   19 expression: KW_RESULT .

    $default  reduce using rule 19 (expression)


State 79

   34 expression: KW_NOT . expression

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 115


State 80

   20 expression: KW_TRUE .

    $default  reduce using rule 20 (expression)


State 81

   21 expression: KW_FALSE .

    $default  reduce using rule 21 (expression)


State 82

   24 expression: CAST_INTEGER . expression

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 116


State 83

   25 expression: CAST_BOOLEAN . expression

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 117


State 84

   26 expression: CAST_CHAR . expression

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 118


State 85

   27 expression: CAST_REAL . expression

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 119


State 86

   35 expression: '-' . expression

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 120


State 87

   36 expression: '+' . expression

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 121


State 88

   23 expression: '(' . expression ')'

    IDENT         shift, and go to state 74
    POSINT        shift, and go to state 75
    REAL          shift, and go to state 76
    STRING        shift, and go to state 77
    KW_RESULT     shift, and go to state 78
    KW_NOT        shift, and go to state 79
    KW_TRUE       shift, and go to state 80
    KW_FALSE      shift, and go to state 81
    CAST_INTEGER  shift, and go to state 82
    CAST_BOOLEAN  shift, and go to state 83
    CAST_CHAR     shift, and go to state 84
    CAST_REAL     shift, and go to state 85
    '-'           shift, and go to state 86
    '+'           shift, and go to state 87
    '('           shift, and go to state 88

    proc_call   go to state 89
    expression  go to state 122


State 89

   45 expression: proc_call .

    $default  reduce using rule 45 (expression)


State 90
